@@ -147,6 +147,7 @@ abbrev "stdev"   function_stdev_unbiased
 abbrev "stdevbias" function_stdev_biased
 abbrev "min"     function_minimum
 abbrev "max"     function_maximum
+abbrev "utpn"    function_utpn
 abbrev "drop"    command_drop
 abbrev "clear"   command_clear
 abbrev "swap"    command_swap
